# text

./: CMakeLists.txt  forbidden.txt  main.cpp  readme.md  result.txt
benchmark/: CMakeLists.txt  core_benchmark.cpp
core/: CMakeLists.txt  app.h  core.h
